--- a/form.html
+++ b/form.html
@@ -6,6 +6,31 @@
   <title>Form HTML</title>
 </head>
 <body>
-  
+    <h1>Buat Account Baru</h1>
+  <h2>Sign Up From</h2>
+  <h3>First Name</h3>
+  <input type="text">
+  <h3>Last Name</h3>
+  <input type="text">
+  <h3>Gender</h3>
+  <input type="radio" name="gender" value="Male">Male<br>
+  <input type="radio" name="gender" value="Female">Female<br>
+
+  <h3>Natiolity</h3>
+  <select name="Natiolity">
+    <option value="indonesia">Indonesia</option>
+    <option value="Malaysia">Malaysia</option>
+    <option value="Singapore">Singapore</option>
+    <option value="other">other</option>
+  </select>
+  <h3>Languange Spoken</h3>
+  <input type="checkbox" value="indonesia">indonesia<br>
+  <input type="checkbox" value="other"><br>
+
+  <h3>BIO</h3>
+  <textarea name="bio" cols="18" rows="10"></textarea><br>
+
+<a href="welcome.html"><input type="button" name="Sign Up" value="Sign Up"></a>
+
 </body>
 </html>
