--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>File HTML index</title>
 </head>
 <body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Selamat Datang</title>
+</head>
+<body>
+  <h1>SELAMAT DATANG</h1>
+  <h4>Terima kasih telah bergabung di Website kami. Media Belajar kita bersama</h4>
   
 </body>
 </html>
