--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File HTML index</title>
+  <title>Selamat Datang</title>
 </head>
 <body>
   <meta charset="UTF-8">
@@ -11,8 +11,19 @@
   <title>Selamat Datang</title>
 </head>
 <body>
-  <h1>SELAMAT DATANG</h1>
-  <h4>Terima kasih telah bergabung di Website kami. Media Belajar kita bersama</h4>
-  
+  <h1>MEDIA ONLINE</h1>
+  <h2>Sosial Media Developer</h2>
+  <p>Belajar dan berbagi agar hidup menjadi baik</p>
+  <h2>Benefit Join di Media Online</h2>
+  <ul>
+    <li>Mendapatkan motivasi dari sesama para Developer</li>
+    <li>Sharing knowlenge</li>
+    <li>Dibuat oleh calon web developer terbaik</li>
+  </ul>
+
+  <h2>Cara Bergabung ke Media Online</h2>
+  <p>1. Mengunjungi Website ini</p>
+  <p>2. Mendaftarkan di <a href="from.html">From Sign Up</a></p>
+  <p>3. Selesai</p>
 </body>
 </html>
