--- a/index.html
+++ b/index.html
@@ -1,29 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selamat Datang</title>
-</head>
-<body>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selamat Datang</title>
-</head>
-<body>
-  <h1>MEDIA ONLINE</h1>
-  <h2>Sosial Media Developer</h2>
-  <p>Belajar dan berbagi agar hidup menjadi baik</p>
-  <h2>Benefit Join di Media Online</h2>
-  <ul>
-    <li>Mendapatkan motivasi dari sesama para Developer</li>
-    <li>Sharing knowlenge</li>
-    <li>Dibuat oleh calon web developer terbaik</li>
-  </ul>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Media Online</title>
+    <style>
+        /* Reset CSS */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-  <h2>Cara Bergabung ke Media Online</h2>
-  <p>1. Mengunjungi Website ini</p>
-  <p>2. Mendaftarkan di <a href="from.html">From Sign Up</a></p>
-  <p>3. Selesai</p>
+        /* Body styling */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f9fc;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+        }
+
+        /* Content box styling */
+        .content-box {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 600px;
+            width: 100%;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        /* Header and subheader styling */
+        h1 {
+            font-size: 2.5rem;
+            color: #0073e6;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            font-size: 1.8rem;
+            color: #333;
+            margin-bottom: 15px;
+        }
+
+        /* Section header styling */
+        h3 {
+            font-size: 1.5rem;
+            color: #0073e6;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+
+        /* Paragraph styling */
+        p {
+            font-size: 1.1rem;
+            color: #555;
+            margin-bottom: 20px;
+            line-height: 1.6;
+        }
+
+        /* List styling */
+        ul, ol {
+            text-align: left;
+            margin: 0 auto 20px auto;
+            padding-left: 20px;
+            max-width: 500px;
+        }
+
+        li {
+            font-size: 1rem;
+            color: #333;
+            margin-bottom: 8px;
+            line-height: 1.6;
+        }
+
+        /* Link styling */
+        a {
+            color: #0073e6;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #005bb5;
+        }
+    </style>
+</head>
+<body>
+    <div class="content-box">
+        <h1>Media Online</h1>
+        <h2>Sosial Media Developer</h2>
+        <p>Belajar dan berbagi agar hidup menjadi lebih baik</p>
+
+        <h3>Benefit Join di Media Online</h3>
+        <ul>
+            <li>Mendapatkan motivasi dari sesama para Developer</li>
+            <li>Sharing knowledge</li>
+            <li>Dibuat oleh calon web developer terbaik</li>
+        </ul>
+
+        <h3>Cara Bergabung ke Media Online</h3>
+        <ol>
+            <li>Mengunjungi Website ini</li>
+            <li>Mendaftarkan di <a href="form.html">Form Sign Up</a></li>
+            <li>Selesai</li>
+        </ol>
+    </div>
 </body>
 </html>
