--- a/form.html
+++ b/form.html
@@ -1,36 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form HTML</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up Form</title>
+    <style>
+        /* Reset CSS */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body styling */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f9fc;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+
+        /* Main form container styling */
+        .form-container {
+            background-color: #fff;
+            padding: 30px 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 100%;
+            max-width: 500px;
+        }
+
+        /* Heading styling */
+        h1, h2 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            font-size: 2rem;
+            color: #0073e6;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+            color: #333;
+        }
+
+        /* Label styling */
+        label {
+            display: block;
+            font-weight: bold;
+            margin-top: 15px;
+            color: #555;
+        }
+
+        /* Input field styling */
+        input[type="text"], select, textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+
+        /* Radio and checkbox styling */
+        input[type="radio"], input[type="checkbox"] {
+            margin-right: 5px;
+        }
+
+        /* Submit button styling */
+        input[type="submit"] {
+            background-color: #0073e6;
+            color: #fff;
+            font-size: 1.1rem;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-top: 20px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #005bb5;
+        }
+
+        /* Spacing between elements */
+        .form-group {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Buat Account Baru</h1>
-  <h2>Sign Up From</h2>
-  <h3>First Name</h3>
-  <input type="text">
-  <h3>Last Name</h3>
-  <input type="text">
-  <h3>Gender</h3>
-  <input type="radio" name="gender" value="Male">Male<br>
-  <input type="radio" name="gender" value="Female">Female<br>
+    <div class="form-container">
+        <h1>Buat Account Baru</h1>
+        <h2>Sign Up Form</h2>
 
-  <h3>Natiolity</h3>
-  <select name="Natiolity">
-    <option value="indonesia">Indonesia</option>
-    <option value="Malaysia">Malaysia</option>
-    <option value="Singapore">Singapore</option>
-    <option value="other">other</option>
-  </select>
-  <h3>Languange Spoken</h3>
-  <input type="checkbox" value="indonesia">indonesia<br>
-  <input type="checkbox" value="other"><br>
+        <form action="welcome.html" method="post">
+            <div class="form-group">
+                <label for="first_name">First name:</label>
+                <input type="text" id="first_name" name="first_name">
+            </div>
 
-  <h3>BIO</h3>
-  <textarea name="bio" cols="18" rows="10"></textarea><br>
+            <div class="form-group">
+                <label for="last_name">Last name:</label>
+                <input type="text" id="last_name" name="last_name">
+            </div>
 
-<a href="welcome.html"><input type="button" name="Sign Up" value="Sign Up"></a>
+            <div class="form-group">
+                <label>Gender:</label>
+                <input type="radio" id="male" name="gender" value="Male">
+                <label for="male">Male</label>
+                <input type="radio" id="female" name="gender" value="Female">
+                <label for="female">Female</label>
+            </div>
 
+            <div class="form-group">
+                <label for="nationality">Nationality:</label>
+                <select id="nationality" name="nationality">
+                    <option value="Indonesia">Indonesia</option>
+                    <option value="Other">Other</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>Language Spoken:</label>
+                <input type="checkbox" id="bahasa" name="language" value="Bahasa Indonesia">
+                <label for="bahasa">Bahasa Indonesia</label>
+                <input type="checkbox" id="english" name="language" value="English">
+                <label for="english">English</label>
+                <input type="checkbox" id="other" name="language" value="Other">
+                <label for="other">Other</label>
+            </div>
+
+            <div class="form-group">
+                <label for="bio">Bio:</label>
+                <textarea id="bio" name="bio" rows="5" cols="30"></textarea>
+            </div>
+
+            <input type="submit" value="Sign Up">
+        </form>
+    </div>
 </body>
 </html>
