--- a/welcome.html
+++ b/welcome.html
@@ -5,9 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <style>
+        /* Reset CSS */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body styling */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+
+        /* Header styling */
+        h1 {
+            font-size: 2.5rem;
+            color: #008080;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Paragraph styling */
+        p {
+            font-size: 1.2rem;
+            color: #555;
+            text-align: center;
+            max-width: 600px;
+            line-height: 1.6;
+        }
+
+        /* Box shadow and spacing */
+        .content {
+            background-color: #fff;
+            padding: 20px 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>SELAMAT DATANG!</h1>
-    <p>Terima kasih telah bergabung di Website Kami. Media Belajar kita bersama!</p>
+    <div class="content">
+        <h1>SELAMAT DATANG!</h1>
+        <p>Terima kasih telah bergabung di Website Kami. Media Belajar kita bersama!</p>
+    </div>
 </body>
 </html>
