--- a/portfolio.html
+++ b/portfolio.html
@@ -82,12 +82,16 @@
                             <td>Fadyaa</td>
                         </tr>
                         <tr>
-                            <th>Kelas</th>
-                            <td>XI RPL 1</td>
-                        </tr>
-                        <tr>
                             <th>Asal Sekolah</th>
                             <td>SMK Negeri 1 Karawang</td>
+                        </tr>
+                        <tr>
+                            <th>Jurusan</th>
+                            <td>Rekayasa Perangkat Lunak</td>
+                        </tr>
+                        <tr>
+                            <th>Kelas</th>
+                            <td>Xl RPL 1</td>
                         </tr>
                         <tr>
                             <th>Tempat, Tanggal Lahir</th>
